scrollbar added and styled, and some fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,15 +16,16 @@ body {
 
 
 main {
+    margin: 2.5rem;
     border: 1px solid #9600ff;
     box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    padding: .75rem;
     border-radius: 10px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 450px; 
 }
 
 header {
+    padding-top: .75rem;
     text-align: center;
     margin-bottom: 1.25rem;
 }
@@ -39,15 +40,44 @@ header>p {
 }
 
 .container {
+    padding: .75rem;
     display: flex;
     flex-direction: column;
     gap: .25rem;
+    max-height: 300px;
+    overflow-y: auto;
+     /* styling scrollbar for firefox */
+     scrollbar-color: #b08eff rgba(0, 0, 0, 0);
+     scrollbar-width: thin;
+}
+
+/* Styles for webkit/blink engines (Chrome, Safari, Opera... )*/
+.container::-webkit-scrollbar{
+    -webkit-appearance: none;
+}
+
+.container::-webkit-scrollbar-button:increment,.contenedor::-webkit-scrollbar-button {
+    display: none;
+} 
+
+.container::-webkit-scrollbar:vertical {
+    width:5px;
+}
+
+.container::-webkit-scrollbar-thumb{
+    border: 1px solid #5c15fe ;
+    background-color: #b08eff;
+    border-radius: 10px;
+}
+
+.container::-webkit-scrollbar-track {
+    border-radius: 10px;  
 }
 
 .options {
     display: flex;
     justify-content: space-between;
-    margin-bottom: .10rem;
+    margin: 0 0 .25rem .75rem;
 }
 
 .options>.filter {
@@ -65,12 +95,15 @@ header>p {
     cursor: pointer;
 }
 
+.createTask-container{
+    margin: 0 .75rem 0rem .75rem;
+}
+
 #newTask {
-    margin-bottom: 0.5rem;
     background-color: whitesmoke;
     border: none;
     padding: .25rem;
-    border-bottom: 1px solid #222;
+    border-bottom: 1px solid gray;
     outline-color: #9600ff;
     margin-right: .5rem;
     width: 60%;
@@ -97,10 +130,13 @@ ul {
     gap: .5rem;
 }
 
+
 .task {
     display: flex;
     justify-content: space-between;
     gap: .5rem;
+    padding: .45rem;
+    border-bottom: .5px solid rgb(194, 194, 194);
 }
 
 .task>label {
